# cop3530

./: README.md
pq03/: meson.build  test.cpp
project1/: .gitignore  avl.cpp  avl.h  commands.cpp  env-windows.sh  main.cpp  meson.build  prepare.sh  shell.cpp  shell.h  test.cpp
project1/report/: report.adoc  testing.adoc
project2/: maketest.sh  meson.build  pagerank.cpp  report.md  test.cpp
quiz03/: meson.build  solution.cpp
quiz04/: .gitignore  imdbtree.cpp  meson.build  meson_options.txt  report.adoc
